--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/kabrittan/LIRI-Node-App#readme",
   "dependencies": {
+    "dotenv": "^5.0.1",
     "request": "^2.85.0",
     "spotify": "^0.3.0",
     "twitter": "^1.7.1"
